--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
